# SIMPLE

./: .coveragerc  .zenodo.json  404.html  CHANGELOG.md  README.md  index.html  index.md  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  readme.md
.github/workflows/: check-version.yml  createdocs.yml  deploy.yml  docs-release.yml  docs.yml  main.yml  pr.yml  preparedocs.yml  release.yml  simple.yml  test.yml  tests.yml
about/: index.html
api/ccsne/: ccsne.md  index.html
api/ccsne-models/: index.html
api/ccsne-plot/: index.html
api/models/: index.html
api/norm/: index.html
api/plot/: index.html
api/plotting/: index.html
api/roseaxes/: index.html
api/simple/: index.html  simple.md
api/utils/: index.html
changelog/: changelog.md  index.html
dev/: index.html
docs/: about.md  changelog.md  dev.md  index.md  install.md
docs/api/: ccsne-models.md  ccsne-plot.md  ccsne.md  models.md  norm.md  plot.md  plotting.md  simple.md  utils.md
examples/ccsne_tutorial1/: ccsne_tutorial1.ipynb  index.html
examples/ccsne_tutorial2/: ccsne_tutorial2.ipynb  index.html
install/: index.html  install.md
license/: index.html
notebooks/: ccsne_tutorial1.ipynb  ccsne_tutorial2.ipynb  ccsne_tutorial3.ipynb  create_simple_db.ipynb  rose_diagram.ipynb  simple_mattias_version.ipynb  test.yaml
simple/: __init__.py  __version__.py  ccsne.py  database.py  models.py  norm.py  plot.py  plotting.py  roseaxes.py  utils.py
tests/: fixtures.py  norm_calc.xlsx  test_database.py  test_norm.py  test_plot.py  test_utils.py
user-guide/: index.html  user-guide.md
(+20 files in other folders)
