[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["simple"]

[project]
name = "SIMPLE"
version = "0.1"

# Developed using this. Not tested with lower versions.
#requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "nugridpy"]

