[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["simple", "simple.*"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[project]
name = "SIMPLE"
version = "0.3.0"

# Developed using this. Not tested with lower versions.
#requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "nugridpy"]

