[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["simple", "simple.*"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[project]
name = "SIMPLE"
version = "0.4.0"
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "pyyaml"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel",
    "nugridpy"]

